# witness

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  marketplace.json  setup
.claude-plugin/: marketplace.json  plugin.json
agents/: guardrail-repairer.md
commands/: repair-guardrail.md  scan.md
docs/: architecture.md  core-concepts.md  migration-guide.md  policies.md  releasing.md  report-format.md  report-schema-v3.json  v3-design.md  v3_specs.md
hooks/: hooks.json  post-edit-audit.sh  post-edit-classify.sh  session-start.sh  stop-gate.sh
policy/: adapters.yml  contracts.yml  defaults.yml  ownership.yml  surfaces.yml
rules/: go-no-fallback-getenv-default.yml  go-no-fallback-lookupenv-default.yml  go-no-swallowing-error-empty-branch.yml  go-no-swallowing-error-return-default.yml  go-no-test-double-identifier.yml  go-no-test-double-import.yml  py-no-fallback-contextlib-suppress.yml  py-no-fallback-get-default.yml  py-no-fallback-next-default.yml  py-no-swallowing-except-pass.yml  py-no-test-double-identifier.yml  py-no-test-double-unittest-mock.yml  rs-no-fallback-map-or.yml  rs-no-fallback-unwrap-or-default.yml  rs-no-swallowing-error-match-default.yml  rs-no-test-double-identifier.yml  ts-no-catch-return-default.yml  ts-no-empty-catch.yml  ts-no-fallback-lookup-else-default.yml  ts-no-fallback-nullish-assign.yml  ts-no-fallback-nullish.yml  ts-no-fallback-or-assign.yml  ts-no-fallback-or.yml  ts-no-fallback-ternary-default.yml  ts-no-promise-catch-default.yml  ts-no-test-double-identifier.yml  ts-no-test-double-import.yml
src/: main.rs
(+105 files in other folders)
