[package]
name = "witness-engine"
version = "3.1.1"
edition = "2024"

[dependencies]
glob = "=0.3.1"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
time = { version = "0.3", features = ["formatting"] }

[[bin]]
name = "witness-engine"
path = "src/main.rs"
